[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omicsio"
version = "0.0.3"
authors = [
  { name="Michael Fatemi", email="gsk6me@virginia.edu" },
]
description = "A package for spatial omics data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"matplotlib",
	"numpy",
	"Pillow",
	"torch",
	"torchvision",
	"openslide-python",
]

[project.urls]
"Homepage" = "https://github.com/myfatemi04/omicsio"
"Bug Tracker" = "https://github.com/myfatemi04/omicsio/issues"
